--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img class="header__logo__img" src="images/profile.png" alt="logo" />
             <h1 class="header__logo__title" ><a href="#">So Hee Park</a></h1>
             </div>
-            <nav>
+            <nav class="header__nav">
             <ul class="header__menu">
                 <li><a class="header__menu__item" href="#home">Portfolio</a></li>
                 <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
@@ -48,24 +48,24 @@
         <section id="home">
             <img class="home__avatar" src="images/profile.png" alt="So Hee's profile picture" />
             <h2 class="home__title" >So Hee <strong class="home__title--strong">Park</strong> </h2>
-            <p class="home__description">Junior Backend Developer</p>
+            <p class="description">Junior Backend Developer</p>
             <a class="home__contact" href="#contact">Contact</a>
         </section>
         <!-- Introduction -->
         <section id="introduction" class="section max-container">
             <h2 class="title">Introduction</h2>
             <h3 class="introduction__bold">Cyber Security</h3>
-            <p class="introduction__description">
+            <p class="description">
                 Enlightenment of understanding the underlying mechanisms of web has driven me into the field of backend. <br> 
                 Played pivotal roles in ensuring web services from cyber attacks. <br>
             </p>
             <h3 class="introduction__bold">Tailored service for client needs</h3>
-            <p class="introduction__description">  
+            <p class="description">  
                 tailored to client needs <br>
                 Eager to handle high-traffic, enhance security and deployment.  <br>
             </p>
             <h3 class="introduction__bold">Problem solving with colleagues</h3>
-            <p class="introduction__description"> 
+            <p class="description"> 
                 Demonstrated strong problem-solving skills by optimizing exception handling and improving system performance.  <br>
                 Place great value in communicating with colleagues. <br>
                 Appreciate code reviews and feedback for refactoring. <br>
@@ -192,16 +192,16 @@
                             <div class="language__bar__metadata">
                                 <span>English</span>
                                 <span>
-                                    <span>●●●●●● &ensp; &ensp;</span>
+                                    <span>●●●●● &ensp; &ensp; &ensp;</span>
                                     <span class="language_desr"> Native &ensp; &ensp;</span>
                                 </span>
                             </div>
                         </li>
                         <li class="language__bar">
                             <div class="language__bar__metadata">
-                                <span>Spanish</span>
+                                <span>Spanish &ensp;</span>
                                 <span>
-                                    <span>●●●●○○ &ensp;</span>
+                                    <span>●●●●○ &ensp;</span>
                                     <span class="language_desr"> Intermediate</span>
                                 </span>
                             </div>
@@ -210,8 +210,8 @@
                             <div class="language__bar__metadata">
                                 <span>Korean</span>
                                 <span>
-                                    <span>●●●●●● &ensp; &ensp;</span>
-                                    <span class="language_desr"> Native &ensp; &ensp;</span>
+                                    <span>●●●●● &ensp; &ensp; &ensp;</span>
+                                    <span class="language_desr"> Native &ensp; &ensp; </span>
                                 </span>
                             </div>
                         </li>
