--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     
 
         <!-- Arrow -->
-        <aside>
+        <aside class="arrow-up">
             <a href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
