JS_home transparent

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
                 <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
                 <li><a class="header__menu__item" href="#education">Education</a></li>
-                <li><a class="header__menu__item" href="#experience">Additional Experience</a></li>
+                <li><a class="header__menu__item" href="#experience">Experience</a></li>
                 <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
             </nav>
@@ -46,10 +46,12 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img class="home__avatar" src="images/profile.png" alt="So Hee's profile picture" />
-            <h2 class="home__title" >So Hee <strong class="home__title--strong">Park</strong> </h2>
-            <p class="description">Junior Backend Developer</p>
-            <a class="home__contact" href="#contact">Contact</a>
+            <div class="home__container">
+                <img class="home__avatar" src="images/profile.png" alt="So Hee's profile picture" />
+                <h2 class="home__title" >So Hee <strong class="home__title--strong">Park</strong> </h2>
+                <p class="description">Junior Backend Developer</p>
+                <a class="home__contact" href="#contact">Contact</a>
+            </div>
         </section>
         <!-- Introduction -->
         <section id="introduction" class="section max-container">
