JS_nav bar toggle

--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
             <h1 class="header__logo__title" ><a href="#">So Hee Park</a></h1>
             </div>
             <nav class="header__nav">
-            <ul class="header__menu">
-                <li><a class="header__menu__item" href="#home">Portfolio</a></li>
-                <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
-                <li><a class="header__menu__item" href="#skills">Skills</a></li>
-                <li><a class="header__menu__item" href="#projects">Projects</a></li>
-                <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
-                <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
-                <li><a class="header__menu__item" href="#education">Education</a></li>
-                <li><a class="header__menu__item" href="#experience">Experience</a></li>
-                <li><a class="header__menu__item" href="#contact">Contact</a></li>
-            </ul>
+                <ul class="header__menu">
+                    <li><a class="header__menu__item" href="#home">Home</a></li>
+                    <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
+                    <li><a class="header__menu__item" href="#skills">Skills</a></li>
+                    <li><a class="header__menu__item" href="#projects">Projects</a></li>
+                    <li><a class="header__menu__item" href="#thesis">Thesis</a></li>
+                    <li><a class="header__menu__item" href="#certificate">Certificate</a></li>
+                    <li><a class="header__menu__item" href="#education">Education</a></li>
+                    <li><a class="header__menu__item" href="#experience">Experience</a></li>
+                    <li><a class="header__menu__item" href="#contact">Contact</a></li>
+                </ul>
             </nav>
+            <button class="header__toggle" aria-label="navigation toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
     </header>
     <!-- Main -->
     <main>
@@ -493,7 +496,7 @@
     
 
         <!-- Arrow -->
-        <aside class="arrow-up">
+        <aside class="arrow_up">
             <a href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
