--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <script src="https://kit.fontawesome.com/1dad10d78a.js" crossorigin="anonymous"></script>        <!-- CSS -->
         <link rel="stylesheet" href="css/style.css" />
         <!-- Javascript -->
-        <script src="src/main.js" defer></script>
+        <script src="src/main.js" defer></script> 
+        <script src="src/project.js" defer></script>
 </head>
 <body>
     <!-- / Header -->
