--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <nav class="header__nav">
                 <ul class="header__menu">
-                    <li><a class="header__menu__item" href="#home">Home</a></li>
+                    <li><a class="header__menu__item active" href="#home">Home</a></li>
                     <li><a class="header__menu__item" href="#introduction">Introduction</a></li>
                     <li><a class="header__menu__item" href="#skills">Skills</a></li>
                     <li><a class="header__menu__item" href="#projects">Projects</a></li>
